--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -32,7 +32,7 @@
 					<span class="icon-bar"></span> 
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#!">Entry Wepapp</a>
+				<a class="navbar-brand" href="#">Entry Wepapp</a>
 			</div>
 
 			<div id="navbar-collapse" class="collapse navbar-collapse">
@@ -44,7 +44,7 @@
 						<a href="" class="dropdown-toggle" data-toggle="dropdown"><!-- <span class="fa fa-user-o"></span> --><img class="avatar img-circle" ng-src="{{avatar}}"> {{user.name}} <b class="caret"></b></a>
 						<ul class="dropdown-menu">
 							<li><a href="#!/userDetails/{{userId}}" ><span class="fa fa-address-card-o"></span> User Details</a></li>
-							<li><a href="#!/userRepository" ><span class="fa fa-file-image-o"></span> User Repository</a></li>
+							<li><a href="#!/userRepository/{{userId}}" ><span class="fa fa-file-image-o"></span> User Repository</a></li>
 							<li><a href="" ng-click="logout()"><span class="fa fa-sign-out"></span> Logout</a></li>
 						</ul>
 					</li>
@@ -91,5 +91,6 @@
 	<script type="text/javascript" src="js/config.js"></script>
 	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/userService.js"></script>
+	<script type="text/javascript" src="js/postService.js"></script>
 </body>
 </html>
