--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -36,12 +36,11 @@
 			</div>
 
 			<div id="navbar-collapse" class="collapse navbar-collapse">
-				<ul class="nav navbar-nav">
-					<li><a href="#!/">Main</a></li>
-				</ul>
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown" ng-show="user">
-						<a href="" class="dropdown-toggle" data-toggle="dropdown"><!-- <span class="fa fa-user-o"></span> --><img class="avatar img-circle" ng-src="{{avatar}}"> {{user.name}} <b class="caret"></b></a>
+						<a href="" class="dropdown-toggle" data-toggle="dropdown">
+						<img class="avatar img-circle" ng-src="{{avatar}}"> {{user.name}} <b class="caret"></b></a>
+						
 						<ul class="dropdown-menu">
 							<li><a href="#!/userDetails/{{userId}}" ><span class="fa fa-address-card-o"></span> User Details</a></li>
 							<li><a href="#!/userRepository/{{userId}}" ><span class="fa fa-file-image-o"></span> User Repository</a></li>
@@ -53,9 +52,9 @@
 		</div>
 	</nav>
 	
-	<!-- <div class="container ng-hide" ng-show="initialized">
+	<div class="container ng-hide" ng-show="initialized">
 		<div class="alert alert-info" ng-show="info">{{info}}</div>
-	</div> -->
+	</div>
 	
 	<div class="container ng-hide" ng-show="initialized">
 		<div class="alert alert-danger" ng-show="error">{{error}}</div>
