--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,8 @@
 			display: none;
 		}
 	</style>
+	
+	<link rel="icon" href="favicon.ico" />
 </head>
 <body>
 
@@ -39,11 +41,11 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li class="dropdown" ng-show="user">
 						<a href="" class="dropdown-toggle" data-toggle="dropdown">
-						<img class="avatar img-circle" ng-src="{{avatar}}"> {{user.name}} <b class="caret"></b></a>
+						<img class="avatar img-circle" ng-src="{{user.avatar}}"> {{user.name}} <b class="caret"></b></a>
 						
 						<ul class="dropdown-menu">
-							<li><a href="#!/userDetails/{{userId}}" ><span class="fa fa-address-card-o"></span> User Details</a></li>
-							<li><a href="#!/userRepository/{{userId}}" ><span class="fa fa-file-image-o"></span> User Repository</a></li>
+							<li><a href="#!/userDetails/{{user.id}}" ><span class="fa fa-address-card-o"></span> User Details</a></li>
+							<li><a href="#!/userRepository/{{user.id}}" ><span class="fa fa-file-image-o"></span> User Repository</a></li>
 							<li><a href="" ng-click="logout()"><span class="fa fa-sign-out"></span> Logout</a></li>
 						</ul>
 					</li>
@@ -72,19 +74,6 @@
             src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script type="text/javascript"
             src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script>
-
-	<!-- <script
-		src="/js/framework/jquery.min.js"></script>
-	<script
-		src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-	<script type="text/javascript"
-		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
-	<script type="text/javascript"
-		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-resource.js"></script>
-	<script type="text/javascript"
-		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-	<script type="text/javascript"
-		src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-cookies.js"></script> -->
 
 
 	<script type="text/javascript" src="js/config.js"></script>
