--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -34,7 +34,7 @@
 					<span class="icon-bar"></span> 
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">Entry Wepapp</a>
+				<a class="navbar-brand" href="#" title="Home">Entry Wepapp</a>
 			</div>
 
 			<div id="navbar-collapse" class="collapse navbar-collapse">
